--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,25 @@ version: 0.3.9
 repository: https://github.com/artflutter/reactive_forms_widgets
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=2.12.0-0 <3.0.0"
+
 
 dependencies:
   flutter:
     sdk: flutter
   dropdown_search: ^0.4.9
   signature: ^3.2.1
-  flutter_touch_spin: ^1.0.1
-  image_picker: ^0.6.7+22
+  flutter_touch_spin: #^1.0.1
+    git:
+      url: git@github.com:tierratechnologies/flutter_touch_spin.git
+      ref: updates-for-null-safety
+  image_picker: ^0.7.2
   freezed_annotation: ^0.12.0
-  reactive_forms: ^8.0.3
-  intl: ^0.16.1
+  reactive_forms: #^8.0.3
+    git:
+      url: git@github.com:tierratechnologies/reactive_forms.git
+      ref: update-pkgs-for-null-safetly
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
